# c-program-arguments

./: CMakeLists.txt  README.md  test.sh
.github/workflows/: test.yml
docs/: VALIDATION.md
example/: main.c
includes/: program_arguments.h
src/: program_arguments.c
